<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/toolbar_container"
            layout="@layout/customize_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar_container">
            <TextView
                android:id="@+id/textViewAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_alarm"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/textViewVibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_vibrate"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@id/textViewAlarm"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <Switch
                android:id="@+id/switchVibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/textViewVibrate" />

            <TextView
                android:id="@+id/textViewSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_sound"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@id/textViewVibrate"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <Switch
                android:id="@+id/switchSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/textViewSound"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/textInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_info"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"
        tools:ignore="MissingConstraints" />

</androidx.drawerlayout.widget.DrawerLayout>